# espotz-solana-hackathon

./: .gitignore  ANCHOR_COMPATIBILITY_ISSUE.md  ARCHITECTURE.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  EXTERNAL_SERVICES_REQUIREMENTS.md  FINAL_STATUS.md  FRONTEND_IMPLEMENTATION_GUIDE.md  ORACLE_ARCHITECTURE.md  PLAYER_IDENTITY_ANALYSIS.txt  PREDICTION_MARKETS.md  PRIZE_DISTRIBUTION_FIX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SOLANA_DEVELOPMENT_RESEARCH.md  SOL_MIGRATION_GUIDE.md  TEST_RESULTS.md  TOURNAMENT_TEST_RESULTS.md  [ESPOTZ] Solana Technical Architecture.md  complete-test.js  package-lock.json  package.json  setup.sh  solana_install.sh  test-client.js  test-client.ts  test-distribute-prizes.js  test-full-flow.js  test-manual.js  test-raw-web3.js  test-simple-flow.js  test-simple.js
programs/prediction-market/: Cargo.toml
programs/prediction-market/src/: errors.rs  lib.rs
programs/prediction-market/src/instructions/: claim_winnings.rs  close_market.rs  create_market.rs  init_position.rs  mod.rs  place_bet.rs  settle_market.rs
programs/prediction-market/src/state/: mod.rs  oracle_config.rs  prediction_market.rs  user_position.rs
programs/tournament/: Cargo.toml
programs/tournament/src/: errors.rs  lib.rs
programs/tournament/src/instructions/: cancel_tournament.rs  claim_refund.rs  create_tournament.rs  distribute_prizes.rs  distribute_prizes_oracle.rs  initialize_oracle.rs  mod.rs  register_player.rs  submit_results.rs
programs/tournament/src/state/: mod.rs  oracle.rs  player_entry.rs  tournament.rs  vault.rs
(+42 files in other folders)
