[package]
name = "prediction-market"
version = "0.1.0"
description = "Espotz Prediction Market with Switchboard Oracle Integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
